# curl_matrix

./: CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.local.json
crates/curl-core/: Cargo.toml
crates/curl-core/src/: lib.rs  simplex.rs
crates/curl-matrix/: Cargo.toml
crates/curl-matrix/src/: main.rs
crates/examples/: Cargo.toml
crates/examples/src/: image.rs
examples/: image.rs
src/: main.rs  simplex.rs
