[package]
name = "curl_matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0" }
nalgebra = "0.34"
rpi-led-matrix = { path = "/home/sionois/Github/rust-rpi-rgb-led-matrix/rpi-led-matrix", default-features = false, features = ["args", "stdcpp-static-link", "embeddedgraphics"]}
rand = "0.9"

[dev-dependencies]
embedded-graphics = "0.8"