[workspace]
resolver = "2"
members = [
    "crates/curl-core",
    "crates/curl-matrix",
    "crates/examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["sionois"]
license = "MIT"

[workspace.dependencies]
nalgebra = "0.34"
rand = "0.9"
rpi-led-matrix = { path = "../rust-rpi-rgb-led-matrix/rpi-led-matrix", default-features = false, features = ["args", "stdcpp-static-link", "embeddedgraphics"] }

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
opt-level = 2
